update skills and fix z-index bug

--- a/src/components/About/Skills.css
+++ b/src/components/About/Skills.css
@@ -8,13 +8,13 @@
   width: 100%;
   height: 5px;
   position: relative;
-  background: #c1ceff;
+  background: #7865ff;
   border-radius: 50px;
   z-index: 999;
 }
 
-.skill_bar-percentage {
-  background: #7865ff;
+/* .skill_bar-percentage {
+  background: ;
 
   height: 5px;
   position: absolute;
@@ -22,7 +22,7 @@
   top: 0;
   left: 0;
   border-radius: 50px;
-}
+} */
 
 .skill_title span {
   color: #fff;
